<resources>
    <string name="app_name">CollegeBinder</string>
    <string name="edit_message">Search a College</string>
    <string name="button_search">Search</string>
    <string name="welcome">Welcome!</string>
    <string name="university_of_illinois_at_urbana_champaign">University of Illinois at Urbana-Champaign</string>
    <string name="general">General</string>
    <string name="location">Location</string>
    <string name="champaign_il">Champaign, IL</string>
    <string name="highest_education">Highest Education</string>
    <string name="post_doctorate">Post-Doctorate</string>
    <string name="campus">Campus</string>
    <string name="rural">Rural</string>
    <string name="_110_000">$110,000</string>
    <string name="average_faculty_salary">Average Faculty Salary</string>
    <string name="_16_000">$16,000</string>
    <string name="net_tuition_revenue_per_student">Net Tuition Revenue Per Student</string>
    <string name="fun_facts">Fun Facts</string>
    <string name="_5_000">5,000</string>
    <string name="number_of_grads">Number of Grads</string>
    <string name="_40_000">40,000</string>
    <string name="number_of_undergrads">Number of Undergrads</string>
    <string name="_40_">40%</string>
    <string name="percent_first_gen">Percent first-gen</string>
    <string name="_16">16%</string>
    <string name="percent_latino_hispanic_other">Percent Latino/Hispanic/Other</string>
    <string name="_14">14%</string>
    <string name="percent_black_african_american">Percent Black/African-American</string>
    <string name="_34">34%</string>
    <string name="percent_asian">Percent Asian</string>
    <string name="_40">40%</string>
    <string name="percent_caucasian">Percent Caucasian</string>
    <string name="_50_">50%</string>
    <string name="percent_female">Percent Female</string>
    <string name="_50">50%</string>
    <string name="percent_male">Percent Male</string>
    <string name="diversity">Diversity</string>
    <string name="_60">60%</string>
    <string name="percent_of_students_receiving_financial_aid">Percent of students receiving financial aid</string>
    <string name="_32_000_80_000">$32,000 - $80,000</string>
    <string name="debt_after_graduation_25th_75th_percentile">Debt after graduation (25th - 75th percentile)</string>
    <string name="_52_000">$52,000</string>
    <string name="out_of_state_tuition">Out of State Tuition</string>
    <string name="_26_000">$26,000</string>
    <string name="in_state_tuition">In-state Tuition</string>
    <string name="_67_000">$67,000</string>
    <string name="median_earnings_6_years_after_grad">Median earnings (6 years after grad)</string>
    <string name="finances">Finances</string>
    <string name="_27_33">27 - 33</string>
    <string name="act_composite">ACT Composite</string>
    <string name="_32_36">32 - 36</string>
    <string name="sat_writing">SAT Writing</string>
    <string name="_30_36">30 - 36</string>
    <string name="sat_reading">SAT Reading</string>
    <string name="_730_790">730 - 790</string>
    <string name="sat_math">SAT Math</string>
    <string name="_1310_1480">1310 - 1480</string>
    <string name="sat_overall_25_75th_percentile">SAT Overall (25-75th percentile)</string>
    <string name="_66">66%</string>
    <string name="admission_rate">Admission Rate</string>
    <string name="student_size">Student Size</string>
    <string name="_40_000_">40,000+</string>
    <string name="religious_affiliation">Religious Affiliation</string>
    <string name="none">None</string>
    <string name="admission_rate_">Admission Rate</string>
    <string name="_66_">66%</string>
    <string name="average_net_cost">Average Net Cost</string>
    <string name="_16_000_">$16,000</string>
    <string name="admissions">Admissions</string>
    <string name="university_of_illinois_at_urbana_champaign_">University of Illinois at Urbana-Champaign</string>
    <string-array
        name="collegeArray">
        <item>University of Illinois Urbana-Champaign </item>
        <item>Ohio State University</item>
        <item>Purdue University</item>
        <item>University of Illinois at Chicago</item>
    </string-array>
</resources>
